src/components/Layout/Header/Social/Social.module.scss
@import "../../../../vars";

.Header {
  // display: none !important;
  position: absolute;
  top: $spaceS;
  left: $spaceS;

  @include min-width(1000px) {
    position: initial;
    display: flex !important;
  }
}

.Social {
  @include flex(row, center, center);

  font-size: 2.5rem !important;
  line-height: 3rem !important;
  margin-bottom: $spaceS;

  a {
    @include flex(column, center, center);

    position: relative;
    transition: 0.3s;
  }

  a:not(:last-child) {
    margin-right: $spaceS;

    @include min-width(1000px) {
      margin-right: $spaceS;
    }
  }

  a:hover {
    transform: translateY(-0.3rem);
  }

  a svg {
    color: $gray5;
  }

  @include min-width(1000px) {
    @include flex(row, center, center);
    margin-right: $spaceL;
  }

  @include min-width(1500px) {
    margin-bottom: $spaceM;
  }
}

